# WGS

./: .gitignore  CLAUDE.md  DEPLOY.md
.claude/agents/: phase-verifier.md
backend/: .env.example  .gitignore  pyproject.toml  railway.json
backend/app/: config.py  main.py
backend/app/db/: schema.sql  supabase.py
backend/app/engine/: angle_engine.py  brief_builder.py  generator.py  memory.py  selector.py  validator.py
backend/app/models/: brand_kit.py  brief.py  enums.py  memory.py  post.py  topic.py
backend/app/poc/: FINDINGS.md  openai_provider.py  prompt.py  prompt_gpt_variant.py  writer.py
backend/app/providers/: duotone.py  image.py  llm.py
backend/app/routes/: export.py  generate.py  picks.py  poc.py  sources.py  topics.py
backend/app/sources/: awareness_calendar.py  paste_link.py
backend/app/taxonomy/: approaches.py  entry_points.py  loader.py  topics.yaml  voice_register.py  wgs_brand_kit.py
backend/scripts/: direct_write_schema_trial.py  poc_writer.py  render_trial_slides.py
backend/tests/: test_angle_engine.py  test_awareness_calendar.py  test_brief_builder.py  test_duotone.py  test_export_route.py  test_generate_route.py  test_generate_route_http.py  test_generator.py  test_main.py  test_memory.py  test_models.py  test_paste_link.py  test_picks_route.py  test_selector.py  test_sources_route.py  test_taxonomy.py  test_validator.py
docs/: blueprint.md  direct-write-poc.md  implementation-guide.md  logbook.md  taxonomy-draft-v1.md  typography-audit.md
frontend/: .env.local.example  next.config.ts  package.json  pnpm-lock.yaml
(+37 files in other folders)
