[project]
name = "content-studio-backend"
version = "0.1.0"
description = "AI Content Studio backend (FastAPI, Railway)"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.4.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
